Fixed animation clipping

--- a/src/app/styles/page-transition.module.css
+++ b/src/app/styles/page-transition.module.css
@@ -1,3 +1,12 @@
+/* CSS */
+.clipContainer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+
 .loadingAnimationContainer {
     position: absolute;
     width: 100vw;
